test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_4.k
import pkg

schema Data(err_pkg.Person):
    name: str
